# saorsa-core

./: .actrc  .clippy.toml  .gitignore  ADAPTIVE_API_ANALYSIS.md  ADAPTIVE_NETWORK_TESTING.md  AGENTS.md  AGENTS_API.md  AGENTS_API.md.backup  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIG_IMPROVEMENTS_SUMMARY.md  CONFIG_TEST_QUALITY_REPORT.md  Cargo.toml  Cargo.toml.bak  INTEGRATION_TEST_FRAMEWORK_SUMMARY.md  KEY_EXCHANGE_IMPLEMENTATION.md  METRICS.md  P2P_MESSAGING_STATUS_2025-10-02_FINAL.md  PERFORMANCE_TESTING_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  README.md  SAORSA_CORE_NETWORK_INTEGRATION.md  SAORSA_CORE_P2P_NAT_INTEGRATION.md  SAORSA_CORE_PORT_SPECIFICATION.md  SAORSA_CORE_PORT_STATUS.md  SAORSA_MESSAGING_P2P_INTEGRATION_SPEC.md  SECURITY_AUDIT_REPORT.md  SECURITY_SCAN_REPORT.md  TASK_5_VALIDATION_REPORT.md  TEST_METRICS_ISSUE.md  TEST_VALIDATION_REPORT.md  UNWRAP_ELIMINATION_SUMMARY.md  build.rs  clippy_output.txt  fix_let_chains.py  full_test_output.txt  mutation-testing.toml  nextest.toml  sgconfig.yml  (+4 more)
.cache/saorsa/: bootstrap_cache.json  metadata.json
.cargo/: config.toml
.claude/: CLAUDE.md  plan.md  settings.json  vps-test.yaml
.claude/orchestrator/: production_state.json
.claude/tasks/: task-7-completion-summary.md
.github/workflows/: ci-quick.yml  claude-code-review.yml  claude.yml  integration-core.yml  integration-identity.yml  integration-network.yml  lint.yml  mutation-testing.yml  release.yml  rust.yml  security-audit.yml  unit-tests.yml
.planning/: ARCHITECTURE-ENCRYPTION.md  CODE_QUALITY_REVIEW_EXECUTIVE_SUMMARY.md  MILESTONES.md  PHASE_2_TASK_1_FIXES_APPLIED.md  PHASE_2_TASK_1_ITERATION_1_STATUS.md  PHASE_2_TASK_1_REVIEW_ITERATION_1.md  PLAN-phase-1.md  PLAN-phase-2.md  PLAN-phase-3.md  PLAN-phase-5.md  PROJECT.md  REVIEW_CYCLE_1_COMPLETE.md  REVIEW_CYCLE_COMPLETE.md  REVIEW_ITERATION_1_COMPLETE.md  STATE.json  baseline-measurements.md  progress.md
.planning/architecture-analysis/: 01-direct-p2p-flow.md  02-dht-storage.md  03-offline-delivery.md  04-routing-strategy.md  05-message-persistence.md  06-forward-secrecy.md  07-encryption-layers.md  08-synthesis.md
.planning/reviews/: CODEX_REVIEW_SUMMARY.md  build.md  glm.md  (+41 more)
.serena/: project.yml
benches/: adaptive_benchmarks.rs  adaptive_benchmarks.rs.disabled  adaptive_network_bench.rs  comprehensive_performance_test.rs.disabled  dht_benchmark.rs  dht_benchmark.rs.disabled  eigentrust_bench.rs  eigentrust_bench.rs.disabled  encoding_baseline.rs  eviction_bench.rs  gossipsub_bench.rs  gossipsub_bench.rs.disabled  identity_encryption_bench.rs  identity_encryption_bench.rs.disabled  integration_benchmarks.rs  load_testing_scenarios.rs.disabled  multi_armed_bandit_bench.rs  performance_monitor.rs  production_benchmark.rs  production_benchmark.rs.disabled  q_learning_cache_bench.rs  security_benchmark.rs  security_benchmark.rs.disabled  simple_bench.rs  validation_bench.rs
docs/: API.md  AUTO_UPGRADE.md  CODE_QUALITY_STANDARDS.md  FEATURE_GAP_PLAN.md  MIGRATION_PQC.md  NETWORK_ARCHITECTURE.md  PLACEMENT_SYSTEM.md  PRODUCTION_GUIDE.md  SECURITY_MODEL.md  SPEC_MODULES.md  phase3-zkvm-design.md  trust-signals-api.md
examples/: adaptive_network_monitor.rs  chat.rs  dht_performance_demo.rs  entity_example.rs  placement_example.rs  security_example.rs  spec_usage.rs  test_api.rs  test_four_word_port.rs  test_keygen.rs  test_network.rs  test_words.rs  webrtc_quic_bridge_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_address_parsing.rs  fuzz_dht_operations.rs  fuzz_network_messages.rs  fuzz_validation.rs
logs/: chat.json  notification.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  user_prompt_submit.json
saorsa-testnet/: Cargo.toml
scripts/: IMPORTANT_SAFETY_NOTE.md  README.md  check_no_panic_unwrap.sh  chunked_tests.sh  ci_nextest.sh  local_ci.sh  retry_test.sh  run_test_network.sh  run_tests_individually.py  test_adaptive_network.sh
src/: address.rs  address.rs.bak2  address_book.rs  api.rs  api.rs.backup  api.rs.bak  bgp_geo_provider.rs  config.rs  config.rs.bak2  control.rs  crypto_verify.rs  crypto_verify.rs.backup  crypto_verify.rs.bak2  dht.rs  dht.rs.backup  dht.rs.bak2  dht_network_manager.rs  dht_network_manager.rs.backup  dht_network_manager.rs.bak2  encrypted_key_storage.rs  encrypted_key_storage.rs.backup  encrypted_key_storage.rs.bak2  error.rs  error.rs.bak2  geographic_enhanced_network.rs  identity_manager.rs  identity_manager.rs.backup  identity_manager.rs.bak2  key_derivation.rs  key_derivation.rs.backup  key_derivation.rs.bak2  lib.rs  mcp.rs  mcp.rs.backup  mcp.rs.bak2  mock_dht.rs  monotonic_counter.rs  monotonic_counter.rs.backup  monotonic_counter.rs.bak2  network.rs  (+35 more)
test_logs/: astgrep_expect.json  astgrep_panic.json  astgrep_unwrap.json
tests/: PR_VERIFICATION_RESULTS.md  adaptive_always_available_test.rs  adaptive_components_corrected_test.rs  adaptive_components_test.rs  adaptive_integration_tests.rs  adaptive_network_integration_test.rs  adaptive_property_tests.rs  ant_quic_integration_test.rs  api_implementation_tests.rs  attestation_handshake_test.rs  attestation_property_tests.rs  attestation_unit_tests.rs  chaos_engineering_tests.rs  config_test.rs  connection_lifecycle_integration_test.rs  connection_lifecycle_proof_test.rs  coordinator_integration_test.rs  dht_client_tests.rs  dht_connectivity_diagnostic_test.rs  dht_core_operations_test.rs  dht_cross_node_discovery_test.rs  dht_cross_node_test.rs  dht_get_comprehensive_test.rs  dht_parallel_replication_e2e_test.rs  dht_peer_address_population_test.rs  dht_property_tests.proptest-regressions  dht_property_tests.rs  dht_replication_diagnostic_test.rs  dht_replication_e2e_test.rs  dht_replication_test.rs  dual_stack_security_integration_test.rs  eigentrust_integration_test.proptest-regressions  eigentrust_integration_test.rs  end_to_end_scenarios_test.rs  eviction_strategy_test.rs  four_word_integration_test.rs  full_network_simulation.rs  geoip_integration_test.rs  gossipsub_integration_test.rs  health_integration_test.rs  (+62 more)
(+356 files in other folders)
