[package]
name = "saorsa-core"
version = "0.3.9"
edition = "2024"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0"
homepage = "https://github.com/dirvine/saorsa-core-foundation"
repository = "https://github.com/dirvine/saorsa-core-foundation"
description = "Saorsa - Core P2P networking library with DHT, QUIC transport, four-word addresses, and MCP integration"
keywords = ["p2p", "networking", "dht", "quic", "decentralized"]
categories = ["network-programming", "asynchronous", "cryptography"]
readme = "README.md"
documentation = "https://docs.rs/saorsa-core"

# Docs.rs configuration to handle build script issues
[package.metadata.docs.rs]
features = []
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["metrics"]
metrics = ["dep:prometheus", "ant-quic/prometheus"]

[dependencies]
# Core async and serialization
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
smallvec = { version = "1.13", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# Cryptography - Primary source of truth: saorsa-pqc 0.3.5
saorsa-pqc = "0.3.5"
# Classical crypto for backward compatibility only
ed25519-dalek = { version = "2.0", features = ["serde"] }
x25519-dalek = "2.0"
# Password hashing (not provided by saorsa-pqc)
argon2 = "0.5"
# Random number generation
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
# Memory protection
zeroize = { version = "1.7", features = ["derive"] }
# TODO: Remove once fully migrated to saorsa-pqc - keeping temporarily for compatibility
aes-gcm = "0.10"
hkdf = "0.12"
blake3 = "1.5"
chacha20poly1305 = "0.10"
hmac = "0.12"

# Performance optimization
parking_lot = "0.12"
flate2 = "1.0"
once_cell = "1.19"

# Networking
ant-quic = { version = "0.8.6", features = ["pqc"] }
four-word-networking = { version = "2.3" }
rustls = { version = "0.21", features = ["dangerous_configuration"] }

# Core-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
fastrand = "2.0"
reqwest = "0.11"
jsonwebtoken = "9.2"

# Git content addressing
bincode = "1.3"
lru = "0.12"

# DHT dependencies - using PQC-safe forward error correction
saorsa-fec = { version = "0.4.2", default-features = false, features = ["pure-rust"] }
saorsa-rsps = "0.2.0"

# Monitoring (optional to avoid build script issues on docs.rs)
prometheus = { version = "0.14", optional = true, default-features = false }

# Configuration
toml = "0.8"
regex = "1.10"
lazy_static = "1.4"
log = "0.4"

# Client dependencies
tokio-stream = "0.1"

# Health check dependencies
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
num_cpus = "1.16"

# Database dependencies for message persistence (SQLite only, replaced sqlx to avoid rsa vulnerability)
deadpool-sqlite = "0.12.1"
rusqlite = { version = "0.37", features = ["chrono", "serde_json", "uuid", "bundled"] }

# Media processing dependencies
image = { version = "0.24", features = ["jpeg", "png", "webp", "gif"] }
blurhash = "0.2"
symphonia = { version = "0.5", features = ["all"] }
rodio = { version = "0.17", features = ["symphonia"] }

# WebRTC dependencies for voice/video calling - updated for security
webrtc = "0.13"
webrtc-ice = "0.13"
webrtc-media = "0.10"
webrtc-sctp = "0.12"
webrtc-srtp = "0.15"
webrtc-dtls = "0.12"
webrtc-data = "0.11"
interceptor = "0.14"
rtcp = "0.13"
rtp = "0.13"

# CLI dependencies (needed for identity CLI types used in tests)
clap = { version = "4.4", features = ["derive"] }
warp = "0.3"
mime_guess = "2.0"
include_dir = "0.7"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
serial_test = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.4", features = ["derive"] }
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
approx = "0.5"
tokio-test = "0.4"

# All features are now enabled by default - no feature flags needed

# [[bench]]
# name = "dht_benchmark"
# harness = false

# [[bench]]
# name = "security_benchmark"
# harness = false

# [[bench]]
# name = "production_benchmark"
# harness = false

# [[bench]]
# name = "multi_armed_bandit_bench"
# harness = false

# [[bench]]
# name = "q_learning_cache_bench"
# harness = false

# [[bench]]
# name = "eviction_bench"
# harness = false

# [[bench]]
# name = "eigentrust_bench"
# harness = false

# [[bench]]
# name = "validation_bench"
# harness = false

# [[bench]]
# name = "gossipsub_bench"
# harness = false

[[test]]
name = "eigentrust_integration_test"
path = "tests/eigentrust_integration_test.rs"

[[test]]
name = "gossipsub_integration_test"
path = "tests/gossipsub_integration_test.rs"

# Platform-specific dependencies for secure memory management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi"] }

# [[bench]]
# name = "comprehensive_performance_test"
# harness = false

# [[bench]]
# name = "load_testing_scenarios"
# harness = false

# [[bench]]
# name = "performance_monitor"
# harness = false
