[package]
name = "saorsa-core"
version = "0.7.13"
edition = "2024"
authors = ["Saorsa Labs Limited <david@saorsalabs.com>"]
license = "AGPL-3.0"
homepage = "https://github.com/dirvine/saorsa-core-foundation"
repository = "https://github.com/dirvine/saorsa-core-foundation"
description = "Saorsa - Core P2P networking library with DHT, QUIC transport, and four-word addresses"
keywords = ["p2p", "networking", "dht", "quic", "decentralized"]
categories = ["network-programming", "asynchronous", "cryptography"]
readme = "README.md"
documentation = "https://docs.rs/saorsa-core"

# Docs.rs configuration to handle build script issues
[package.metadata.docs.rs]
features = []
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["metrics"]
metrics = ["dep:prometheus", "ant-quic/prometheus"]
# Compile-time gate for test/dummy helpers. Off by default.
mocks = []
## Optional: enable hyperbolic greedy routing helpers in API
h2_greedy = []
# Test utilities including mock DHT for integration tests
test-utils = []
# Entangled Attestation system (Phase 1: Entangled Identity)
# Enables EntangledId derivation and verification for software attestation
attestation = []
# Enable real SP1 zkVM proof generation (requires SP1 SDK and toolchain)
# Without this feature, a mock prover is used for testing
zkvm-prover = ["dep:sp1-sdk"]
# Enable SP1 Groth16/PLONK verification (lightweight, NOT post-quantum secure)
# Use for on-chain verification compatibility only
zkvm-verifier-groth16 = ["dep:sp1-verifier"]

[dependencies]
# Core async and serialization
tokio = { version = "1.35", features = ["full"] }

# Pin time crate to compatible version
time = { version = "0.3.36", features = ["serde", "parsing", "formatting"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
smallvec = { version = "1.13", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
hex = "0.4"
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.21"
array-init = "2.1"
serde_cbor = "0.11"
statrs = "0.16"

# Cryptography - Primary source of truth: saorsa-pqc 0.3.5
saorsa-pqc = "0.3.12"
# Classical crypto for backward compatibility only
# Classical crypto removed from production; PQC-only via saorsa-pqc and ant-quic
# Password hashing
argon2 = "0.5"
# Random number generation
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
# Memory protection
zeroize = { version = "1.7", features = ["derive"] }
# TODO: Remove once fully migrated to saorsa-pqc - keeping temporarily for compatibility
blake3 = "1.5"
hmac = "0.12"
hkdf = "0.12"
# AEAD encryption for messaging
chacha20poly1305 = "0.10"

# Performance optimization
parking_lot = "0.12"
flate2 = "1.0"
once_cell = "1.19"

# Networking
ant-quic = { version = "0.10.4", features = ["pqc"] }
four-word-networking = { version = "2.6" }

# Core-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
fastrand = "2.0"

# Git content addressing
bincode = "1.3"
lru = "0.12"

# DHT dependencies
saorsa-rsps = "0.2.0"

# zkVM-compatible logic crate for attestation and verification
saorsa-logic = { version = "0.1", features = ["std", "alloc"] }

# SP1 SDK for zkVM proof generation and STARK verification (optional, heavy dependency)
# Enable with zkvm-prover feature for real proof generation and STARK verification
sp1-sdk = { version = "4.0", optional = true }

# SP1 Verifier for Groth16/PLONK verification (lightweight, NOT post-quantum secure)
# Enable with zkvm-verifier-groth16 feature for on-chain compatible verification
sp1-verifier = { version = "4.0", optional = true, default-features = false }

# Monitoring (optional to avoid build script issues on docs.rs)
prometheus = { version = "0.14", optional = true, default-features = false }

# Configuration
toml = "0.8"
regex = "1.10"
lazy_static = "1.4"
log = "0.4"

tokio-stream = "0.1"

# Health check dependencies
axum = "0.7"
tower = { version = "0.4", features = ["util"] }

# HTTP client for upgrade system
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
num_cpus = "1.16"

# Database dependencies for message persistence (SQLite only, replaced sqlx to avoid rsa vulnerability)
deadpool-sqlite = "0.12.1"
rusqlite = { version = "0.37", features = ["chrono", "serde_json", "uuid", "bundled"] }

# WebRTC implementation - using saorsa-webrtc with pluggable signaling
saorsa-webrtc = "0.1.2"

# CLI dependencies (needed for identity CLI types used in tests)
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
serial_test = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.4", features = ["derive"] }
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
approx = "0.5"
tokio-test = "0.4"

# All features are now enabled by default - no feature flags needed

[[bench]]
name = "adaptive_benchmarks"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[[test]]
name = "eigentrust_integration_test"
path = "tests/eigentrust_integration_test.rs"

[[test]]
name = "gossipsub_integration_test"
path = "tests/gossipsub_integration_test.rs"

# Platform-specific dependencies for secure memory management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi"] }

# [[bench]]
# name = "comprehensive_performance_test"
# harness = false

# [[bench]]
# name = "load_testing_scenarios"
# harness = false

# [[bench]]
# name = "performance_monitor"
# harness = false
