[package]
name = "saorsa-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
saorsa-core = { path = ".." }
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_address_parsing"
path = "fuzz_targets/fuzz_address_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_network_messages"
path = "fuzz_targets/fuzz_network_messages.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validation"
path = "fuzz_targets/fuzz_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dht_operations"
path = "fuzz_targets/fuzz_dht_operations.rs"
test = false
doc = false